# daphnis

dgemm/: .gitignore  CMakeLists.txt
gemm/: CMakeLists.txt
gemm/src/: main.cpp
